subversions are available from <http://www.newts.org/~troc/poe.html>.

[ Hey, Rocco, don't forget to assign a tag to the release after you
make dist on it!  0.0910 is ``v0_0910''!  For example:

  cvs tag -Rc v0_10 .
]

,----- To Do -----
|
| Overhaul Kernel and Session manpages' DESCRIPTIONs.
| Create a test program for fork and sigchld.
| Don't forget to add the Tk support to the documentation.
|
`-----------------


0.1003 2000.05.12
-----------------

I finally found a system where Perl/Tk builds.  This isn't a comment
on Perl/Tk (which is huge to build; 77 megs!) as much as it is on
the state of its OS/2 port.  The samples/tk.perl example program is
working!

Documentation is still lagging behind development at the moment, but
I should have more time to focus on it now that the Tk support is in
open beta on the 'web site.

Since 0.100201 was a private beta for Win32 support testing, and maybe
two people at most have seen it, you should give its section of the
Changes a look.


0.100201 2000.05.10
-------------------

This is a private release, 0.10_02_01, for Addi.  He's been having
trouble with POE and POE::Component::IRC on Win32.

Found a bug in Wheel::ReadWrite that prevented separate InputHandle
and OutputHandle from working correctly.

Finished initial Tk support.  Posted/yielded events, alarms/delays,
and selects are now handled through the Tk event loop, if Tk is used
before POE.

Philip Gwyn has noticed POE leaving zombie processes behind.  This was
traced back to naive signal handlers for $SIG{CH?LD} and the
$kernel->fork() "safe" polling code.  Both handlers have been changed
to use waitpid() and loop until all children have been reaped.

Deleted $POE::Kernel::{signal} before defining &POE::Kernel::signal.
As of 5.6.0, perl warns of a redefined function, even though it's
supposed to be called as a POE::Kernel method.  Grrr.

Addi pointed out that the PREREQ_PM line for Filter was incorrect.  It
should be requiring Filter::Util::Call 1.04.  Fixed!
