@@ -190,10 +190,11 @@ BEGIN {
     eval 'sub POE_HAS_TIME_HIRES () { 1 }';
   }
 
-  # Provide a dummy EINPROGRESS for systems that don't have one.  Give
-  # it an improbable errno value.
+  # http://support.microsoft.com/support/kb/articles/Q150/5/37.asp
+  # defines EINPROGRESS as 10035.  We provide it here because some
+  # Win32 users report POSIX::EINPROGRESS is not vendor-supported.
   if ($^O eq 'MSWin32') {
-    eval '*EINPROGRESS = sub { 3.141 };'
+    eval '*EINPROGRESS = sub { 10035 };'
   }
 }
 
@@ -2061,6 +2062,7 @@ sub _internal_select {
         # handle.
 
         unless ($kr_handle->[HND_VECCOUNT]->[$select_index]) {
+warn $handle;
           vec($self->[KR_VECTORS]->[$select_index], fileno($handle), 1) = 0;
 
           # If we're using Tk, then we tell it to stop watching this
@@ -2182,6 +2184,7 @@ sub select_pause_write {
   # housekeeping since we're only pausing the handle.  It's assumed
   # that we'll resume it again at some point.
 
+warn $handle;
   vec($self->[KR_VECTORS]->[VEC_WR], fileno($handle), 1) = 0;
 
   if (POE_HAS_TK) {
