@@ -17,13 +17,18 @@ make dist on it!  0.0910 is ``v0_0910''!  For example:
 |
 | Overhaul Kernel and Session manpages' DESCRIPTIONs.
 | Create a test program for fork and sigchld.
-| Don't forget to add the Tk support to the documentation.
+| Don't forget to document the Tk support.
 |
 `-----------------
 
 
 0.1003 2000.05.12
 -----------------
+
+Addi found a list of Win32 error codes, including the elusive
+EINPROGRESS.  I changed the dummy value to the correct one in
+POE::Kernel and POE::Wheel::SocketFactory.  Now SocketFactory works on
+Win32, in perl 5.005_03.  Mileage may vary as MSWin32 perl evolves.
 
 I finally found a system where Perl/Tk builds.  This isn't a comment
 on Perl/Tk (which is huge to build; 77 megs!) as much as it is on
